--- a/client/src/style.css
+++ b/client/src/style.css
@@ -25,7 +25,7 @@
     height: 80vh;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     border-bottom-right-radius: 30px;
-
+    border-top-right-radius: 30px;
 }
   
 .left-section {
@@ -118,9 +118,8 @@
   
   .right-section {
     flex: 1;
-    background: url('./images/a.png');
-    background-size: 160%;
-    background-position: 10%;
+    background: url('./images/a.png') no-repeat;
+    background-size: 150%;
     display: flex;
     justify-content: center;
     align-items: center;
